--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -38,5 +38,10 @@ jobs:
           plugin_habits_languages_threshold: 0%
           plugin_isocalendar: yes
           plugin_isocalendar_duration: half-year
+          plugin_stargazers: yes
+          plugin_stargazers_charts: yes
+          plugin_stargazers_charts_type: classic
+          plugin_stargazers_days: 14
+          plugin_stargazers_worldmap: yes
           plugin_stars: yes
           plugin_stars_limit: 4
