--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -25,7 +25,7 @@ jobs:
           token: ${{ secrets.METRICS_TOKEN }}
 
           # Options
-          template: classic
+          template: markdown
           base: header, activity, community, repositories
           config_timezone: Europe/Vienna
           plugin_isocalendar: yes
