--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -25,9 +25,10 @@ jobs:
           token: ${{ secrets.METRICS_TOKEN }}
 
           # Options
-          template: markdown
+          template: classic
           base: header, activity, community, repositories
           config_timezone: Europe/Vienna
+          plugin_fortune: yes
           plugin_isocalendar: yes
           plugin_isocalendar_duration: full-year
           plugin_notable: yes
@@ -37,5 +38,15 @@ jobs:
           plugin_people_limit: 24
           plugin_people_size: 28
           plugin_people_types: followers, following
+          plugin_screenshot: yes
+          plugin_screenshot_background: yes
+          plugin_screenshot_mode: image
+          plugin_screenshot_selector: body
+          plugin_screenshot_title: Screenshot
+          plugin_screenshot_url: https://phranck.dev
+          plugin_screenshot_viewport: {
+            "width": 1280,
+            "height": 1280
+          }
           plugin_stars: yes
           plugin_stars_limit: 4
