--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -30,7 +30,7 @@ jobs:
           config_timezone: Europe/Vienna
           plugin_fortune: yes
           plugin_isocalendar: yes
-          plugin_isocalendar_duration: full-year
+          plugin_isocalendar_duration: half-year
           plugin_notable: yes
           plugin_notable_from: organization
           plugin_notable_types: commit
